--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -35,7 +35,7 @@ stages:
   # --- START Deploy UAT --- #
   - stage: "Build_release_candidate"
     displayName: "Build release candidate"
-    condition: not(eq(${{parameters.SOURCE_REF}},'-'))
+    condition: not(eq("${{parameters.SOURCE_REF}}","-"))
     jobs:
       - job: "build"
         displayName: 'Build release candidate docker image'
