--- a/.devops/azure-templates/helm-microservice-chart-deploy.yml
+++ b/.devops/azure-templates/helm-microservice-chart-deploy.yml
@@ -57,7 +57,7 @@ steps:
       waitForExecution: ${{ parameters.WAIT_FOR_EXECUTION }}
       arguments: ${{ parameters.ARGUMENTS }}
       ${{ if eq(parameters['DO_BLUE_GREEN_DEPLOY'], True) }}:
-        overrideValues: microservice-chart.image.tag=${{ parameters.GREEN_VERSION }},microservice-chart.canaryDelivery.create=true,microservice-chart.canaryDelivery.image.tag=${{ parameters.BLUE_VERSION }},microservice-chart.fullnameOverride=soak-beta-pagopa-ecommerce-transactions-service
+        overrideValues: microservice-chart.image.tag=${{ parameters.GREEN_VERSION }},microservice-chart.canaryDelivery.create=true,microservice-chart.canaryDelivery.image.tag=${{ parameters.BLUE_VERSION }},microservice-chart.fullnameOverride=soak-canary-pagopa-ecommerce-transactions-service,microservice-chart.nameOverride=soak-canary-pagopa-ecommerce-transactions-service
       ${{ else }}:
         overrideValues: microservice-chart.image.tag=${{ parameters.GREEN_VERSION }},microservice-chart.canaryDelivery.create=false
   - template: ./chart-current-version.yml
