--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -97,6 +97,7 @@ stages:
                       APP_NAME: soak-$(K8S_IMAGE_REPOSITORY_NAME)
                     ${{ else }}:
                       APP_NAME: soak-canary-$(K8S_IMAGE_REPOSITORY_NAME)
+                      BLUE_VERSION: $(app_version)
                     VALUE_FILE: "helm/values-uat.yaml"
                     GREEN_VERSION: $(app_version)
 
