feat: add github token

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,17 @@
     <version>3.1.1</version>
     <name>pagopa-ecommerce-transactions-service</name>
     <description>pagopa-ecommerce-transactions-service</description>
+    <repositories>
+        <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+        <repository>
+            <id>github</id>
+            <!--suppress UnresolvedMavenProperty, create a github personal access token with at least package:read permission and set in environment-->
+            <url>https://public:${env.GITHUB_TOKEN}@maven.pkg.github.com/pagopa/pagopa-ecommerce-commons</url>
+        </repository>
+    </repositories>
     <properties>
         <java.version>21</java.version>
         <spring-cloud-azure.version>4.0.0</spring-cloud-azure.version>
@@ -552,26 +563,6 @@
                 <configuration>
                     <argLine>${argLine}</argLine>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-scm-plugin</artifactId>
-                <version>2.0.0-M3</version>
-                <configuration>
-                    <skipCheckoutIfExists>false</skipCheckoutIfExists>
-                    <connectionUrl>scm:git:https://github.com/pagopa/pagopa-ecommerce-commons.git</connectionUrl>
-                    <scmVersionType>tag</scmVersionType>
-                    <scmVersion>${pagopa-ecommerce-commons.version}</scmVersion>
-                    <goals>install -DskipTests</goals>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>bootstrap</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>com.diffplug.spotless</groupId>
