feat(pipeline): [CHK-4379] force maven cache update

--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -55,7 +55,7 @@ stages:
             jdkArchitectureOption: 'x64'
             publishJUnitResults: false
             testResultsFiles: '**/surefire-reports/TEST-*.xml'
-            goals: 'clean validate'
+            goals: 'clean validate -U'
             sonarQubeRunAnalysis: false
 
         - task: Maven@4
