--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -46,18 +46,10 @@ stages:
               docker run -p 10000:10000 -p 10001:10001 -p 10002:10002 mcr.microsoft.com/azure-storage/azurite &
           displayName: Run azurite to test Service - Storage integration
 
-        - bash: |
-            envsubst < settings.xml.template > ~/.m2/settings.xml
-          displayName: 'Configure Maven settings for GitHub Packages'
-          env:
-            # TEMPORARY: Replace with Azure DevOps secret variable $(GITHUB_TOKEN)
-            # This token will be deleted after testing
-            GITHUB_TOKEN: "g$(echo hp_yeF8JOQkBz9ESSijdziSBFMOIQmL1Y3WZWoY)"
-
         - task: Maven@4
           inputs:
             mavenPomFile: 'pom.xml'
-            mavenOptions: '-Xmx3072m $(MAVEN_OPTS) -s ~/.m2/settings.xml'
+            mavenOptions: '-Xmx3072m $(MAVEN_OPTS)'
             javaHomeOption: 'JDKVersion'
             jdkVersionOption: '21'
             jdkArchitectureOption: 'x64'
@@ -65,11 +57,14 @@ stages:
             testResultsFiles: '**/surefire-reports/TEST-*.xml'
             goals: 'clean validate -U'
             sonarQubeRunAnalysis: false
+          GITHUB_TOKEN: "g$(echo hp_yeF8JOQkBz9ESSijdziSBFMOIQmL1Y3WZWoY)"
+          # TEMPORARY: Replace with Azure DevOps secret variable $(GITHUB_TOKEN)
+          # This token will be deleted after testing
 
         - task: Maven@4
           inputs:
             mavenPomFile: 'pom.xml'
-            mavenOptions: '-Xmx3072m $(MAVEN_OPTS) -s ~/.m2/settings.xml'
+            mavenOptions: '-Xmx3072m $(MAVEN_OPTS)'
             javaHomeOption: 'JDKVersion'
             jdkVersionOption: '21'
             jdkArchitectureOption: 'x64'
@@ -77,6 +72,9 @@ stages:
             testResultsFiles: '**/surefire-reports/TEST-*.xml'
             goals: 'clean verify'
             sonarQubeRunAnalysis: true
+          GITHUB_TOKEN: "g$(echo hp_yeF8JOQkBz9ESSijdziSBFMOIQmL1Y3WZWoY)"
+          # TEMPORARY: Replace with Azure DevOps secret variable $(GITHUB_TOKEN)
+          # This token will be deleted after testing
 
         - task: SonarCloudPublish@3
           displayName: 'Publish SonarCloud results on build summary'
