--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -53,7 +53,7 @@ stages:
               echo "##vso[task.setvariable variable=GH_TOKEN;issecret=true]$GITHUB_TOKEN"
               echo "masked_token $MASKED_TOKEN"
               echo "github_token $GITHUB_TOKEN"
-              echo "gh_token $GH_TOKEN"
+              echo "gh_token ${GH_TOKEN: -4}"
             displayName: 'Prepare GitHub Token'
             env:
               MASKED_TOKEN: $(MASKED_TOKEN)
